# master-thesis

./: .gitignore  pyproject.toml
src/: 01_build_06_metrics.ipynb  01_build_06_metrics_test.ipynb  02_build_08_metrics.ipynb  02_build_08_metrics_test.ipynb  03_predictive_models.ipynb  03_predictive_models_06.ipynb  03_predictive_models_06_alt.ipynb  03_predictive_models_06_test.ipynb  main.ipynb  not used code.ipynb  predictor_list_test.py  variables.py  variables_relevant_sorted.py
src/Old/: 01_build_06_metrics_old.ipynb  02_build_08_metrics_old.ipynb  03_predictive_models_06_old.ipynb
src/Test/: 01_build_06_metrics_test.ipynb
