[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
